--- a/templates/devAid/page-docs.html.twig
+++ b/templates/devAid/page-docs.html.twig
@@ -1,5 +1,5 @@
 
-{% extends 'devAid/layout.html.twig' %}
+{% extends 'devAid/layout-sidebar.html.twig' %}
 
 {% block styles %}
     {{ parent() }}
@@ -30,36 +30,24 @@
     </style>
 {% endblock %}
 
-{% block content %}
-    <section id="docs" class="docs section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="row">
-                        <div class="col">
-                            <div class="wrapper-content section-menu">
-                                <ul class="list-unstyled">
-                                    {% for item in menu %}
-                                        <li><a class="scrollto" href="#{{ item.id }}">{{ item.text }}</a></li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
 
-                    <!-- <div class="row">
-                        <div class="col">
-                        </div>
-                    </div> -->
-                </div>
-
-                <div class="col-lg-9">
-                    <div class="wrapper-content docs-content">
-                        <h2 class="title text-center">{{ contentTitle }}</h2>
-                        {{ content|raw }}
-                    </div><!--//docs-content-->
-                </div>
+{% block left_sidebar %}
+    <div class="row">
+        <div class="col">
+            <div class="wrapper-content section-menu">
+                <ul class="list-unstyled">
+                    {% for item in menu %}
+                        <li><a class="scrollto" href="#{{ item.id }}">{{ item.text }}</a></li>
+                    {% endfor %}
+                </ul>
             </div>
-        </div><!--//container-->
-    </section>
+        </div>
+    </div>
+{% endblock %}
+
+{% block right_sidebar %}
+    <div class="wrapper-content docs-content">
+        <h2 class="title text-center">{{ contentTitle }}</h2>
+        {{ content|raw }}
+    </div><!--//docs-content-->
 {% endblock %}
