--- a/templates/devAid/page-docs.html.twig
+++ b/templates/devAid/page-docs.html.twig
@@ -30,7 +30,6 @@
     </style>
 {% endblock %}
 
-
 {% block left_sidebar %}
     <div class="row">
         <div class="col">
@@ -41,6 +40,12 @@
                     {% endfor %}
                 </ul>
             </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <iframe data-aa="1399531" src="//acceptable.a-ads.com/1399531" scrolling="no" style="border:0px; padding:0; width:100%; height:100%; overflow:hidden" allowtransparency="true"></iframe>
         </div>
     </div>
 {% endblock %}
