--- a/templates/devAid/layout-sidebar.html.twig
+++ b/templates/devAid/layout-sidebar.html.twig
@@ -7,6 +7,12 @@
             <div class="row">
                 <div class="col-lg-3">
                     {% block left_sidebar %}{% endblock %}
+
+                    <div class="row">
+                        <div class="col">
+                            <iframe data-aa="1399531" src="//acceptable.a-ads.com/1399531" scrolling="no" style="border:0px; padding:0; width:100%; height:100%; overflow:hidden" allowtransparency="true"></iframe>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="col-lg-9">
