--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ meta_description }}">
     <meta name="author" content="ThenLabs">
+    <meta property="og:image" content="{{ asset('preview.png') }}">
     {# <link rel="shortcut icon" href="favicon.ico"> #}
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163364401-1"></script>
