--- a/templates/devAid/layout-sidebar.html.twig
+++ b/templates/devAid/layout-sidebar.html.twig
@@ -13,6 +13,12 @@
                             <iframe data-aa="1399531" src="//acceptable.a-ads.com/1399531" scrolling="no" style="border:0px; padding:0; width:100%; height:100%; overflow:hidden" allowtransparency="true"></iframe>
                         </div>
                     </div>
+
+                    <div class="row">
+                        <div class="col text-center" style="padding-top: 15px">
+                            <a href="https://a-ads.com?partner=1399531">Insertar un anuncio aquí</a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="col-lg-9">
